--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -1,43 +1,75 @@
-html,
-body {
-    font-family: 'Arial', sans-serif;
-    font-size: 16px;
-    color: black;
-    line-height: 1;
-}
-
-.container {
-    max-width: 1754px+120px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 60px;
-    padding-right: 60px;
-}
-
-.none {
-    display: none;
-}
-
-p {
-    letter-spacing: 1.15px;
-}
-
-h3 {
-    text-align: center;
-}
-
-.table-td {
-    width: 8%;
-    padding: 2px 6px;
-    border: 1px solid;
-    text-align: center;
-}
-
-.comment {
-    font-size: 12px;
-    text-align: center;
-}
-
-.underlined {
-    border-bottom: 1px solid;
-}
+    html,
+    body {
+        font-family: 'Arial', sans-serif;
+        font-size: 16px;
+        color: black;
+        line-height: 1;
+    }
+    
+    .container {
+        max-width: 1754px+120px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+    
+    .none {
+        display: none;
+    }
+    
+    p {
+        letter-spacing: 1.15px;
+    }
+    
+    h3 {
+        text-align: center;
+    }
+    
+    .table-td {
+        width: 8%;
+        padding: 0.2% 0.4%;
+        border: 1px solid;
+        text-align: center;
+    }
+    
+    .comment {
+        font-size: 12px;
+        text-align: center;
+    }
+    
+    .underlined {
+        border-bottom: 1px solid;
+    }
+    
+    //Медиа запросы для адаптива под печать
+    @media print {
+        html,
+        body {
+            font-size: 8px;
+        }
+        h1 {
+            font-size: 10px;
+        }
+        h2 {
+            font-size: 9px;
+        }
+        .container {
+            max-width: 796px+30px;
+            margin-left: auto;
+            margin-right: auto;
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+        .comment {
+            font-size: 6px;
+            text-align: center;
+        }
+        .heading {
+            font-size: 12px;
+            font-weight: normal;
+        }
+        .commodity-section-table {
+            font-size: 8px;
+        }
+    }
