--- a/style/blocks/_signatures.scss
+++ b/style/blocks/_signatures.scss
@@ -1,67 +1,64 @@
 .signatures {
     width: 100%;
     display: flex;
-    margin-bottom: 200px;
     &__left-part {
         width: 59.8%;
         .left-table-one {
             width: 100%;
-            padding: 0 80px 5px 10px;
+            padding: 0 3% 0.5% 0.7%;
         }
         .left-table-two {
             width: 100%;
-            padding: 0 80px 5px 10px;
+            padding: 0 3% 0.5% 0.7%;
         }
         .left-table-three {
             width: 100%;
             padding-right: 60px;
             border-collapse: separate;
-            border-spacing: 12px;
+            border-spacing: $border-spacing;
         }
         .left-table-four {
             width: 100%;
-            padding: 0 80px 5px 0;
+            padding: 0 3% 0.5% 0.7%;
             border-collapse: separate;
-            border-spacing: 12px;
+            border-spacing: $border-spacing;
         }
         .left-table-five {
             width: 100%;
-            padding: 0 180px 0 350px;
+            padding: 0 12% 0 45%;
             border-collapse: separate;
-            border-spacing: 12px;
+            border-spacing: $border-spacing;
         }
     }
     &__right-part {
-        width: 40.5%;
+        width: 43.5%;
         border-left: 1px solid black;
-        padding: 30px 0;
+        padding: 1.5% 0;
         p {
             margin-left: 10px;
-            margin-bottom: 15px;
+            margin-bottom: 2%;
         }
         .right-table-one {
             border-collapse: separate;
-            border-spacing: 12px;
+            border-spacing: $border-spacing;
         }
         .right-table-two {
             border-collapse: separate;
-            border-spacing: 12px;
+            border-spacing: $border-spacing;
         }
         .right-table-three {
             border-collapse: separate;
-            border-spacing: 12px;
-            margin-bottom: 15px;
+            border-spacing: $border-spacing;
+            padding-bottom: 4%;
         }
         .right-table-four {
             width: 100%;
             border-collapse: separate;
-            border-spacing: 12px;
-            margin-bottom: 10px;
+            border-spacing: $border-spacing;
         }
         .right-table-five {
             border-collapse: separate;
-            border-spacing: 12px;
-            margin-bottom: 10px;
+            border-spacing: $border-spacing;
         }
     }
 }
